feat: Update with new github action workflows